--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -12,12 +12,12 @@
         <a class="nav-link active" href="/">Layout</a>
     </li>
     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle active" href="/film/show" id="filmDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Films
+        <a class="nav-link dropdown-toggle active" href="/mission/show" id="filmDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Missions
         </a>
         <ul class="dropdown-menu" aria-labelledby="filmDropdown">
-            <li><a class="dropdown-item" href="/film/show">Afficher les films</a></li>
-            <li><a class="dropdown-item" href="/film/add">Ajouter des films</a></li>
+            <li><a class="dropdown-item" href="/mission/show">Afficher les missions</a></li>
+            <li><a class="dropdown-item" href="/mission/add">Ajouter des missions</a></li>
         </ul>
     </li>
     <li class="nav-item dropdown">
