--- a/templates/mission/show_mission.html
+++ b/templates/mission/show_mission.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.css') }}" >
     <title>Missions</title>
 </head>
+{% extends 'layout.html' %}
 <body>
 
 {#{{ missions }}#}
