--- a/templates/mission/add_mission.html
+++ b/templates/mission/add_mission.html
@@ -7,6 +7,7 @@
     <!-- Inclure Bootstrap 5 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.4.0/dist/css/bootstrap.min.css">
 </head>
+{% extends 'layout.html' %}
 <body>
     <div class="container mt-4">
         <h1>Formulaire d'ajout de Mission</h1>
