--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -21,12 +21,12 @@
         </ul>
     </li>
     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle active" href="/genre-film/show" id="genreDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Genres
+        <a class="nav-link dropdown-toggle active" href="/etape/show" id="genreDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Etapes
         </a>
         <ul class="dropdown-menu" aria-labelledby="genreDropdown">
-            <li><a class="dropdown-item" href="/genre-film/show">Afficher les genres de films</a></li>
-            <li><a class="dropdown-item" href="/genre-film/add">Ajouter des genres de films</a></li>
+            <li><a class="dropdown-item" href="/genre-film/show">Afficher les etapes</a></li>
+            <li><a class="dropdown-item" href="/genre-film/add">Ajouter des etapes</a></li>
         </ul>
     </li>
     <li class="nav-item">
